add service list all files
